# ibus-table-zhengma

./: Makefile.am  README  configure.ac
docs/: Makefile.am
icons/: Makefile.am
m4/: Makefile.am
tables/: Makefile.am  zhengma.txt
